--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,6 +131,23 @@ section {
 
 .header__basket {
     cursor: pointer;
+    position: relative;
+}
+
+.header__basket-num {
+    position: absolute;
+    background-color: #d62240;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    top: -5px;
+    right: -5px;
 }
 
 .burger {
@@ -490,6 +507,7 @@ footer {
     overflow-y: auto;
     overflow-x: hidden;
     box-sizing: border-box;
+    padding: 40px;
 }
 
 .modal_active {
@@ -506,7 +524,7 @@ footer {
     align-items: center;
     position: relative;
     max-width: 1000px;
-    min-height: 670px;
+    min-height: 500px;
     width: 100%;
     border-radius: 27px;
     background: #fff;
@@ -524,6 +542,127 @@ footer {
     z-index: 10;
 }
 
+.modal__content {
+    box-sizing: border-box;
+    padding: 40px 70px;
+    width: 100%;
+}
+
+.modal-basket__title {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 24px;
+}
+
+.modal-basket__order-row {
+    display: flex;
+    align-items: flex-start;
+    position: relative;
+    box-sizing: border-box;
+    padding: 18px 0
+}
+
+.modal-basket__order-row:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    background: radial-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    bottom: -1px;
+    left: 40px;
+    right: 40px;
+    height: 1px;
+}
+
+.modal-basket__order-icon {
+    margin-right: 40px;
+}
+
+.modal-basket__order-name {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 15px;
+}
+
+.modal-basket__order-count {
+    display: flex;
+    align-items: center;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+}
+
+.modal-basket__order-count-btn {
+    border-radius: 10px;
+    background: #FFFEFE;
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.modal-basket__order-count-btn_upper img {
+    transform: rotate(180deg);
+}
+
+.modal-basket__order-count-number {
+    box-sizing: border-box;
+    padding: 8px 15px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.modal-basket__order-price {
+    margin-left: auto;
+    flex-shrink: 0;
+    font-size: 15px;
+    color: #676767;
+}
+
+.modal-basket__order-price b {
+    color: #262626;
+}
+
+.modal-basket__data {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-basket__data input {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #DADADA;
+    background: #F4F4F4;
+    margin-bottom: 18px;
+    box-sizing: border-box;
+    padding: 15px 25px;
+    color: #8C8C8C;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.modal-basket__data .button {
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: none;
+    margin-bottom: 15px;
+}
+
+.modal-basket__data-regulations {
+    text-align: center;
+    color: #676767;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.modal-basket__data-regulations a {
+    font-weight: 600;
+}
 
 @media (max-width: 1272px) {
     .container {
@@ -536,6 +675,7 @@ footer {
 }
 
 @media (max-width: 1024px) {
+
     html,
     body {
         overflow-x: hidden;
@@ -638,6 +778,10 @@ footer {
         margin-top: 8px;
     }
 
+    .modal__content {
+        padding: 30px 20px;
+    }
+
 }
 
 @media (max-width: 675px) {
@@ -736,7 +880,7 @@ footer {
 
     .footer__about-socials a {
         display: inline-block;
-    width: 25px;
+        width: 25px;
     }
 
     .footer__about-socials a img {
@@ -744,7 +888,7 @@ footer {
     }
 
     .footer__contacts {
-max-height: 70px;
+        max-height: 70px;
     }
 
     .footer__contacts-item {
@@ -754,6 +898,49 @@ max-height: 70px;
 
     .footer__contacts-item:first-child {
         max-width: 60%;
-    height: 70px;
+        height: 70px;
+    }
+
+    .modal {
+        padding: 30px 10px;
+    }
+
+    .modal-basket__title {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    .modal-basket__order-row {
+        padding: 10px 0;
+    }
+
+    .modal-basket__order-row:not(:last-child)::after {
+        right: 0;
+        left: 0;
+    }
+
+    .modal-basket__order-icon {
+        display: none;
+        margin-right: 10px;
+    }
+
+    .modal-basket__order-icon img {
+width: 30px;
+    }
+
+    .modal-basket__order-name {
+        margin-bottom: 10px;
+        margin-right: 10px;
+    }
+
+    .modal-basket__order-count-btn {
+        height: 25px;
+        width: 25px;
+        border-radius: 5px;
+        padding: 2px;
+    }
+
+    .modal-basket__data input {
+        margin-bottom: 10px;
     }
 }
