testing loading services

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -421,6 +421,7 @@ section {
     padding: 15px 25px;
     min-height: 202px;
     align-content: space-between;
+    flex: auto;
 }
 
 .service__title {
